# linear-agentics

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/workflows/: linear-agentics-build.yml
.obsolete/: DESIGN.md
docs/: MUTANT_HUNTING.md  improvements.md
examples/: capability_negotiation.py  deploy_service.py  sre_triage.py
linear_agent/: approval.py  budget.py  tokens.py
linear_agentics/: __init__.py  actions.py  agent.py  approval.py  audit.py  budget.py  negotiation.py  tokens.py  utils.py
tests/: test_actions.py  test_agent.py  test_audit.py  test_budget.py  test_negotiation.py  test_properties.py  test_tokens.py
