[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linear-agent-runtime"
version = "0.1.0"
description = "Safety rails for AI agents doing infrastructure work"
readme = "DESIGN.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["linear_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
