# This project uses `uv` as the python and project manager
# I.e. use `uv run ...` to invoke `python`, `pytest` etc.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linear-agentics"
version = "0.1.0"
description = "Safety rails for AI agents doing infrastructure work"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
db = [
    "asyncpg>=0.29.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100.0",
    "mutmut>=3.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["linear_agentics"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::UserWarning",
]
