# This project uses `uv` as the python and project manager
# I.e. use `uv run ...` to invoke `python`, `pytest` etc.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linear-agentics"
version = "0.1.0"
description = "Safety rails for AI agents doing infrastructure work"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
db = [
    "asyncpg>=0.29.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100.0",
    "mutmut>=3.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["linear_agentics"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::UserWarning",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 128
indent-width = 4

